--- a/Student_kamer_detail.html
+++ b/Student_kamer_detail.html
@@ -24,6 +24,7 @@
 			<link rel="stylesheet" href="css/ion.rangeSlider.skinFlat.css" />
 			<link rel="stylesheet" href="css/bootstrap.css">
 			<link rel="stylesheet" href="css/main.css">
+			<link rel="stylesheet" href="css/style.css">
 		</head>
 		<body>
 
@@ -81,9 +82,9 @@
 
 		    <section class="service-area section-gap" id="service">
 				<div class="container">
-					<div class="row d-flex justify-content-center">
+					<div class="row no-flex">
 						<h1>13min, Hoogezand</h1>
-						<img src="img/Voorbeeld_studentenkamer.jpg"
+						<img class="img-thumbnail" class="foto" src="img/sk1.jpg">
 
 					</div>
 				</div>
