--- a/student-zoeken.html
+++ b/student-zoeken.html
@@ -17,7 +17,7 @@
 			<title>Real Estate</title>
 
 			<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
-			<link rel="stylesheet" href="css/linearicons.css">=
+			<link rel="stylesheet" href="css/linearicons.css">
 			<link rel="stylesheet" href="css/font-awesome.min.css">
 			<link rel="stylesheet" href="css/nice-select.css">
 			<link rel="stylesheet" href="css/ion.rangeSlider.css" />
@@ -66,12 +66,12 @@
 							<div class="search-field">
 								<form class="search-form" action="#">
 									 <div class="row">
-									 	<!-- <div class="col-lg-12 d-flex align-items-center justify-content-center toggle-wrap">
+									 	<div class="col-lg-12 d-flex align-items-center justify-content-center toggle-wrap">
 											<div class="row">
 												<div class="col">
-													<h4 class="search-title">Search Properties For</h4>
+													<h4 class="search-title">Search for Accomodation</h4>
 												</div>
-												<div class="col">
+												<!-- <div class="col">
 													<div class="onoffswitch3 d-block mx-auto">
 													    <input type="checkbox" name="onoffswitch3" class="onoffswitch3-checkbox" id="myonoffswitch3" checked>
 													    <label class="onoffswitch3-label" for="myonoffswitch3">
@@ -87,9 +87,9 @@
 													        </span>
 													    </label>
 													</div>													
-												</div>
+												</div> -->
 											</div>
-									 	</div> -->
+									 	</div>
 									    <div class="col-lg-3 col-md-6 col-xs-6">
 											<select name="lorem ipsum" class="app-select form-control" required>
 												<option data-display="lorem ipsum">lorem ipsum</option>
@@ -122,15 +122,11 @@
 												<option value="3">Three</option>
 											</select>
 									    </div>
-									    <div class="col-lg-4 range-wrap">
+									    <div class="col-lg-6  range-wrap">
 									    	<p>Prijs:</p>
 									    	<input type="text" id="range" value="" name="range" />
 									    </div>	
-									    <div class="col-lg-4 range-wrap">
-									    	<p>Maat:</p>
-									    	<input type="text" id="range2" value="" name="range" />
-									    </div>										    
-									    <div class="col-lg-4 d-flex justify-content-end">
+									    <div class="col-lg-6 d-flex justify-content-end">
 											<button class="primary-btn mt-50" style="height: 45px;">Zoek<span class="lnr lnr-arrow-right"></span></button>
 										</div>						  
 									  </div>
@@ -143,68 +139,39 @@
 			<!-- End banner Area -->
 
 			<!-- Start service Area -->
-			<!-- <section class="service-area section-gap" id="service">
-				<div class="container">
+			<section class="service-area section-gap" id="service">
+				<div class="container"> 
 					<div class="row d-flex justify-content-center">
 						<div class="col-md-8 pb-40 header-text">
-							<h1>Why we are the best</h1>
-							<p>
-								Who are in extremely love with eco friendly system.
-							</p>
+							<h1>Who are we</h1>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-4 col-md-6 pb-30">
+						<div class="col-lg-6 pb-30">
 							<div class="single-service">
 								<h4><span class="lnr lnr-user"></span>Expert Technicians</h4>
 								<p>
 									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
 								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6 pb-30">
-							<div class="single-service">
-								<h4><span class="lnr lnr-license"></span>Professional Service</h4>
 								<p>
 									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
 								</p>								
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6 pb-30">
+						<div class="col-lg-6 pb-30">
 							<div class="single-service">
 								<h4><span class="lnr lnr-phone"></span>Great Support</h4>
 								<p>
 									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
 								</p>								
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4><span class="lnr lnr-rocket"></span>Technical Skills</h4>
 								<p>
 									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
 								</p>				
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4><span class="lnr lnr-diamond"></span>Highly Recomended</h4>
-								<p>
-									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
-								</p>								
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4><span class="lnr lnr-bubble"></span>Positive Reviews</h4>
-								<p>
-									Usage of the Internet is becoming more common due to rapid advancement of technology and power.
-								</p>									
-							</div>
-						</div>						
 					</div>
 				</div>	
-			</section> -->
+			</section>
 			<!-- End service Area -->
 
 			<!-- Start property Area -->
@@ -481,48 +448,14 @@
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-3  col-md-6 col-sm-6">
+						<!-- <div class="col-lg-3  col-md-6 col-sm-6">
 							<div class="single-footer-widget">
-								<h6>Newsletter</h6>
-								<p>Stay update with our latest</p>
-								<div class="" id="mc_embed_signup">
-
-										<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
-
-										<div class="d-flex flex-row">
-
-											<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-
-
-				                            	<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-				                            	<div style="position: absolute; left: -5000px;">
-													<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-												</div>
-				                          	
-											<!-- <div class="col-lg-4 col-md-4">
-												<button class="bb-btn btn"><span class="lnr lnr-arrow-right"></span></button>
-											</div>  -->
-										</div>		
-										<div class="info"></div>
-										</form>
-								</div>
-								</div>
+                            </div>
 						</div>						
 						<div class="col-lg-3  col-md-6 col-sm-6">
 							<div class="single-footer-widget mail-chimp">
-								<h6 class="mb-20">Instragram Feed</h6>
-								<ul class="instafeed d-flex flex-wrap">
-									<li><img src="img/i1.jpg" alt=""></li>
-									<li><img src="img/i2.jpg" alt=""></li>
-									<li><img src="img/i3.jpg" alt=""></li>
-									<li><img src="img/i4.jpg" alt=""></li>
-									<li><img src="img/i5.jpg" alt=""></li>
-									<li><img src="img/i6.jpg" alt=""></li>
-									<li><img src="img/i7.jpg" alt=""></li>
-									<li><img src="img/i8.jpg" alt=""></li>
-								</ul>
 							</div>
-						</div>
+						</div> -->
 						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="single-footer-widget">
 								<h6>Follow Us</h6>
