--- a/Student_kamer_detail.html
+++ b/Student_kamer_detail.html
@@ -84,8 +84,12 @@
 				<div class="container">
 					<div class="row no-flex">
 						<h1>13min, Hoogezand</h1>
-						<img class="img-thumbnail" class="foto" src="img/sk1.jpg">
-
+						<p>test</p>
+						<img class="tumb250px foto" src="img/sk1.jpg">
+						<img class="tumb250px foto" src="img/sk2.jpg">
+						<img class="tumb250px foto" src="img/sk3.jpg">
+						<img class="tumb250px foto" src="img/sk4.jpg">
+						
 					</div>
 				</div>
 
