--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<title>Real Estate</title>
 
 			<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
-			<link rel="stylesheet" href="css/linearicons.css">
+			<link rel="stylesheet" href="css/linearicons.css">	
 			<link rel="stylesheet" href="css/font-awesome.min.css">
 			<link rel="stylesheet" href="css/nice-select.css">
 			<link rel="stylesheet" href="css/ion.rangeSlider.css" />
@@ -28,22 +28,13 @@
 		</head>
 		<body>
 			<!-- Modal html begin -->
-			<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal fade" id="userSelect" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				<div class="modal-dialog" role="document">
 					<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="modal-body">
-						MODAL
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary">Save changes</button>
-					</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-primary target" data-target="student" data-dismiss="modal">Student</button>
+							<button type="button" class="btn btn-primary target" data-target="landlord" data-dismiss="modal">Landlord</button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -554,6 +545,7 @@
 			<script src="js/ion.rangeSlider.js"></script>
 			<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 			<script src="js/jquery.magnific-popup.min.js"></script>
-			<script src="js/main.js"></script>	
+			<script src="js/main.js"></script>
+			<script src="js/script.js"></script>	
 		</body>
 	</html>
