--- a/Student_kamer_detail.html
+++ b/Student_kamer_detail.html
@@ -83,13 +83,14 @@
 		    <section class="service-area section-gap" id="service">
 				<div class="container">
 					<div class="row no-flex">
+						<button class="buttonbck">Back</button>
 						<h1>13min, Hoogezand</h1>
 						<p>test</p>
 						<img class="tumb250px foto" src="img/sk1.jpg">
 						<img class="tumb250px foto" src="img/sk2.jpg">
 						<img class="tumb250px foto" src="img/sk3.jpg">
 						<img class="tumb250px foto" src="img/sk4.jpg">
-						
+						<button class="buttonreact">React</button>
 					</div>
 				</div>
 
@@ -425,7 +426,7 @@
 			<!-- End Contact Area -->	
 
 			<!-- start footer Area -->		
-			<footer class="footer-area section-gap">
+			<footer class="footer-area clearfix section-gap">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-3  col-md-6 col-sm-6">
