--- a/student-zoeken.html
+++ b/student-zoeken.html
@@ -464,6 +464,7 @@
 			<script src="js/ion.rangeSlider.js"></script>
 			<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 			<script src="js/jquery.magnific-popup.min.js"></script>
-			<script src="js/main.js"></script>	
+            <script src="js/main.js"></script>	
+            <script src="js/script.js"></script>
 		</body>
 	</html>
