Student_contact toegevoegd

--- a/Student_contact.html
+++ b/Student_contact.html
@@ -94,11 +94,7 @@
 
 						</ul>
 					</p>
-						<img class="tumb250px foto" src="img/sk1.jpg">
-						<img class="tumb250px foto" src="img/sk2.jpg">
-						<img class="tumb250px foto" src="img/sk3.jpg">
-						<img class="tumb250px foto" src="img/sk4.jpg">
-							<button class="buttonreact">React</button>
+							<button class="buttonreact">Send</button>
 					</div>
 				</div>
 
