--- a/student-zoeken.html
+++ b/student-zoeken.html
@@ -64,7 +64,7 @@
 								30 minutes or less
 							</h1>
 							<div class="search-field">
-								<form class="search-form" action="#">
+								<form class="search-form" action="post" method="">
 									 <div class="row">
 									 	<div class="col-lg-12 d-flex align-items-center justify-content-center toggle-wrap">
 											<div class="row">
@@ -415,8 +415,8 @@
 			<!-- start footer Area -->		
 			<footer class="footer-area section-gap">
 				<div class="container">
-					<div class="row">
-						<div class="col-lg-3  col-md-6 col-sm-6">
+					<div class="row d-flex justify-content-around">
+						<div class="col-lg-3  offset-lg-3 col-md-6 col-sm-6">
 							<div class="single-footer-widget">
 								<h6>About Us</h6>
 								<p>
