--- a/Student_contact.html
+++ b/Student_contact.html
@@ -84,16 +84,21 @@
 				<div class="container">
 					<div class="row no-flex">
 							<button class="buttonbck">Back</button>
-						<h1>13min, Hoogezand</h1>
-						<p class="infotext"> 
-							<ul>
-							<li>Traveling time 13min</li>
-							<li>Price 400,-</li>
-							<li>Square meters 39m2</li>
-							<li>Place Hoogezand</li>
+						<h1>Contact form</h1>
 
-						</ul>
-					</p>
+						<form>
+  	<div class="form-group">
+    	<label for="name">Name</label>
+    <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Name">
+    <small id="emailHelp" class="form-text text-muted"></small>
+  </div>
+  <div class="form-group">
+  		<label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+</form>
+						
 							<button class="buttonreact">Send</button>
 					</div>
 				</div>
