--- a/Aanbieder_overzicht.html
+++ b/Aanbieder_overzicht.html
@@ -94,10 +94,10 @@
 
 						</ul>
 					</p>
-						<img class="tumb250px foto" src="img/sk1.jpg">
-						<img class="tumb250px foto" src="img/sk2.jpg">
-						<img class="tumb250px foto" src="img/sk3.jpg">
-						<img class="tumb250px foto" src="img/sk4.jpg">
+						<img class="tumb250px fotoanb" src="img/sk1.jpg">
+						<img class="tumb250px fotoanb" src="img/sk2.jpg">
+						<img class="tumb250px fotoanb" src="img/sk3.jpg">
+						<img class="tumb250px fotoanb" src="img/sk4.jpg">
 							<button class="buttonreact">React</button>
 					</div>
 				</div>
