--- a/Aanbieder_login_aanmelden.html
+++ b/Aanbieder_login_aanmelden.html
@@ -82,29 +82,16 @@
 
 		    <section class="service-area section-gap" id="service">
 				<div class="container">
-					<div class="row no-flex">
-							<button class="buttonbck">Back</button>
-						<h1>My houses for rent</h1>
-				
-				<div class="row">
-  					<div class="column"><img class="tumb250px foto" src="img/sk1.jpg"></div>
-  					<div class="column"><p class="apprtmntinfo"> hier komt info over het apartement</p></div>
- 					 <div class="column"><button class="buttonreact">details</button><button class="buttonreact">verwijderen</button></div>
-				</div>
-				<div class="row">
-  					<div class="column"><img class="tumb250px foto" src="img/sk2.jpg"></div>
-  					<div class="column"><p class="apprtmntinfo"> hier komt info over het apartement</p></div>
- 					 <div class="column"><button class="buttonreact">details</button><button class="buttonreact">verwijderen</button></div>
-				</div>						
-				<div class="row">
-  					<div class="column"><img class="tumb250px foto" src="img/sk3.jpg"></div>
-  					<div class="column"><p class="apprtmntinfo"> hier komt info over het apartement</p></div>
- 					 <div class="column"><button class="buttonreact">details</button><button class="buttonreact">verwijderen</button></div>
-				</div>
+					<div class="row no-flex">	
+						<h1>Welcome</h1>
+					<div>
+						<button class="loginreg">Sign-in</button>
 					</div>
-							<button class="buttonreact">Add housing space</button>
+					<div>
+						<button class="loginreg">Sign-up</button>
 					</div>
 				</div>
+
 			</section>
 
 			<!-- End banner Area -->
