--- a/Aanbieder_overzicht.html
+++ b/Aanbieder_overzicht.html
@@ -86,20 +86,20 @@
 							<button class="buttonbck">Back</button>
 						<h1>My houses for rent</h1>
 				
-				<div class="row">
+				<div class="row my-3">
   					<div class="column"><img class="tumb250px foto" src="img/sk1.jpg"></div>
-  					<div class="column"><p class="apprtmntinfo"> hier komt info over het apartement</p></div>
- 					 <div class="column"><button class="buttonreact">details</button><button class="buttonreact">verwijderen</button></div>
+  					<div class="column mx-3"><p class="apprtmntinfo"> hier komt info over het apartement</p></div>
+ 					<div class="column mx-3"><button class="buttonreact">details</button><button class="buttonreact">verwijderen</button></div>
 				</div>
-				<div class="row">
+				<div class="row my-3">
   					<div class="column"><img class="tumb250px foto" src="img/sk2.jpg"></div>
-  					<div class="column"><p class="apprtmntinfo"> hier komt info over het apartement</p></div>
- 					 <div class="column"><button class="buttonreact">details</button><button class="buttonreact">verwijderen</button></div>
+  					<div class="column mx-3"><p class="apprtmntinfo"> hier komt info over het apartement</p></div>
+ 					<div class="column mx-3"><button class="buttonreact">details</button><button class="buttonreact">verwijderen</button></div>
 				</div>						
-				<div class="row">
+				<div class="row my-3">
   					<div class="column"><img class="tumb250px foto" src="img/sk3.jpg"></div>
-  					<div class="column"><p class="apprtmntinfo"> hier komt info over het apartement</p></div>
- 					 <div class="column"><button class="buttonreact">details</button><button class="buttonreact">verwijderen</button></div>
+  					<div class="column mx-3"><p class="apprtmntinfo"> hier komt info over het apartement</p></div>
+ 					<div class="column mx-3"><button class="buttonreact">details</button><button class="buttonreact">verwijderen</button></div>
 				</div>
 					</div>
 							<button class="buttonreact">Add housing space</button>
