--- a/student-zoeken.html
+++ b/student-zoeken.html
@@ -29,7 +29,8 @@
 		<body>
 
 			<!-- Start Header Area -->
-			<header class="default-header">
+			<?php include 'php/menu.php';?>
+			<!-- <header class="default-header">
 				<nav class="navbar navbar-expand-lg  navbar-light bg-light">
 					<div class="container">
 						  <a class="navbar-brand" href="index.html">
@@ -51,7 +52,7 @@
 						  </div>						
 					</div>
 				</nav>
-			</header>
+			</header> -->
 			<!-- End Header Area -->
 
 			<!-- start banner Area -->
